src/objects/EmailAddress__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting use to hold multiple email address with &quot;;&quot; to send notification.</description>
    <fields>
        <fullName>ClassKeyWord__c</fullName>
        <label>ClassKeyWord</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompleteTestReportName__c</fullName>
        <label>CompleteTestReportName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSeparator__c</fullName>
        <label>EmailSeparator</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>EmailSubject</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailTestReportName__c</fullName>
        <label>FailTestReportName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileExtension__c</fullName>
        <label>FileExtension</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutionName1__c</fullName>
        <label>JobExecutionName1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutionName2__c</fullName>
        <label>JobExecutionName2</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutionName3__c</fullName>
        <label>JobExecutionName3</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutionTime1__c</fullName>
        <label>JobExecutionTime1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutionTime2__c</fullName>
        <label>JobExecutionTime2</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutionTime3__c</fullName>
        <label>JobExecutionTime3</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobResult__c</fullName>
        <label>JobResult</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueJobName__c</fullName>
        <label>QueueJobName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueScheduleTime__c</fullName>
        <description>Time should be in form of (0 0 23 * * ?)</description>
        <label>QueueScheduleTime</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusAborted__c</fullName>
        <label>StatusAborted</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusComplete__c</fullName>
        <label>StatusComplete</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusFailed__c</fullName>
        <label>StatusFailed</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccAddress__c</fullName>
        <label>ccAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>toAddress__c</fullName>
        <description>Multiple Address should be with &quot;;&quot;</description>
        <inlineHelpText>Multiple Address should be with &quot;;&quot;</inlineHelpText>
        <label>toAddress</label>
        <type>TextArea</type>
    </fields>
    <label>EmailAddress</label>
</CustomObject>